@@ -158,6 +158,16 @@ AC_SUBST(MAD_LIB)
 
 AM_CONDITIONAL(include_MP3, [test -n "$MAD_LIB"])
 
+dnl === test for libsndfile ===
+PKG_CHECK_MODULES(SNDFILE, sndfile >= 1.0.2, ac_cv_sndfile=1, ac_cv_sndfile=0)
+
+AC_DEFINE_UNQUOTED([HAVE_SNDFILE],${ac_cv_sndfile},
+			[Set to 1 if you have libsndfile.])
+
+AC_SUBST(SNDFILE_CFLAGS)
+AC_SUBST(SNDFILE_LIBS)
+
+AM_CONDITIONAL(include_AIFF, [test $ac_cv_sndfile = 1])
 
 
 dnl === test for FLAC++ and FLAC ====
